--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Редактировать профиль{% endblock %}
 {% block content %}
-<div class="pt-3 pb-3 ps-3 pe-3 me-2" style="background-color: white; display:inline-block;   position: fixed; top: 20%; left: 25%;">
+<div class="pt-3 pb-3 ps-3 pe-3 me-2" style="background-color: white; display:inline-block;   position: fixed; top: 10%; left: 25%;">
  <h1>Редактировать профиль</h1>
  <p>Вы можете отредактировать свою учетную запись, используя следующую форму:</p>
  <form action="." method="post" enctype="multipart/form-data">
- {{ user_form.as_p }}
- {{ profile_form.as_p }}
+    <img src="{{ user.profile.photo.url }}" width="200" height="200" class="rounded mb-3">
+    <p class="pe-5">Имя: {{ user_form.first_name }} </p>
+    <p>Фамилия: {{ user_form.last_name }}</p>
+    <p>Дата рождения: {{ profile_form.date_of_birth }}</p>
+    <p>Загрузить фото профиля {{ profile_form.photo }}</p>
  {% csrf_token %}
- <button class="btn mt-2"  type="submit" value="Save changes" style="background-color: rgb(81 129 184); color: white;">Сохранить</button>
+ <button class="btn mt-0"  type="submit" value="Save changes" style="background-color: rgb(81 129 184); color: white;">Сохранить</button>
  </form>
  </div>
 {% endblock %}
