--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,12 +15,7 @@
 <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon.ico">
+
 <meta name="theme-color" content="#7952b3">
 
 <style>
@@ -37,7 +32,6 @@
         font-size: 3.5rem;
       }
     }
-    
   </style>
 
   
@@ -48,12 +42,12 @@
 {% if messages %}
   {% for message in messages %}
     {% if message.tags == 'success' %}
-    <div class="alert alert-success"" role="alert" style="position: fixed; top: 10%; left: 35%;">
+    <div class="alert alert-success"" role="alert" style="position: fixed; top: 10%; left: 80%;">
         {{ message|safe }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% else %}
-    <div class="alert alert-danger" role="alert" style="position: fixed; top: 10%; left: 35%;">
+    <div class="alert alert-danger" role="alert" style="position: fixed; top: 10%; left: 80%;">
         {{ message|safe }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div> 
@@ -63,27 +57,16 @@
   <nav class="navbar navbar-expand-md navbar-white bg-white fixed-top ps-5">
     <div class="container-fluid">
       <a class="navbar-brand" style="color: black;">
-        <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-top">
+        <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt=""  class="d-inline-block align-top" style="width:30px !important; height:24px !important;">
         Bookmarks
       </a>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          {% if request.user.is_authenticated %}
-          <li {% if section == "dashboard" %} class="nav-item"{% endif %}>
-            <a class="nav-link" href="{% url "dashboard" %}" style="color: black;">Моя страница</a>
-          </li>
-          <li {% if section == "image" %} class="nav-item"{% endif %}>
-            <a class="nav-link" href="#}" style="color: black;">Фотографии</a>
-          </li>
-          <li {% if section == "people" %} class="nav-item"{% endif %}>
-            <a class="nav-link" href="#}" style="color: black;">Друзья</a>
-          </li>
-          {% endif %}
 
          {% if request.user.is_authenticated %}
-         <li class="nav-item dropdown" style=" position: fixed; top: 1,5%; left: 88%;">
+         <li class="nav-item dropdown pb-2" style=" position: fixed; top: 1.2%; left: 88%;">
           <a class="nav-link" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
-            {{ request.user.first_name }}
+            <img src="{{ user.profile.photo.url }}" width="30" height="30" style="border-radius: 50%;" class="me-1"> {{ request.user.first_name }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item pt-0 pb-0" href="{% url "password_change" %}"">Сменить пароль</a></li>
@@ -102,8 +85,41 @@
     </div>
   </nav>
  <div id="content">
+  {% if request.user.is_authenticated %}
+  <div class="pt-3 pb-3 ps-2 me-2" style="display:inline-block;   position: fixed; top: 7%; left: 10%;">
+  <a {% if section == "dashboard" %} class="nav-item"{% endif %}>
+    <a class="nav-link" href="{% url "dashboard" %}" style="color: black;">Моя страница</a>
+  </a>
+  <a {% if section == "images" %} class="nav-item"{% endif %}>
+    <a class="nav-link" href="{% url "images:list" %}" style="color: black;">Лента фотографии</a>
+  </a>
+  <a {% if section == "people" %} class="dropdown-item pt-0 pb-0"{% endif %}>
+    <a class="nav-link" href="#" style="color: black;">Друзья</a>
+  </a>
+  </div>
+  {% endif %}
  {% block content %}{% endblock %}
  </div>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+ <script>
+   var csrftoken = Cookies.get('csrftoken');
+   function csrfSafeMethod(method) {
+     // these HTTP methods do not require CSRF protection
+     return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+   }
+   $.ajaxSetup({
+     beforeSend: function(xhr, settings) {
+       if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+         xhr.setRequestHeader("X-CSRFToken", csrftoken);
+       }
+     }
+   });
+   $(document).ready(function(){
+     {% block domready %}
+     {% endblock %}
+      });
+ </script>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
  </body>
