--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{user.first_name}} {{user.last_name}} | Инструментальная панель{% endblock %}
 {% block content %}
-<div class="pt-2 pb-2 ps-2 pe-2 me-2" style="background-color: white; display:inline-block;   position: fixed; top: 10%; left: 23%;">
+<div class="pt-2 pb-0 ps-2 pe-2 me-2" style="background-color: white; display:inline-block;   position: fixed; top: 10%; left: 23%;">
  <h3>Инструментальная панель</h3>
  {% with total_images_created=request.user.images_created.count %}
  <p>{{user.first_name}}, добро пожаловать на вашу приборную панель. У вас есть закладки количестве:
@@ -11,5 +11,16 @@
     с других веб-сайтов
  <a href="javascript:{% include "bookmarklet_launcher.js" %}" class="btn  ms-1 mt-2" style="background-color: rgb(81 129 184); color: white;"> Добавить в закладки</a>
  <p>
+ </div>
+ <div style="display:inline-block;   position: fixed; top: 40%; left: 23%;">
+ <div class="ps-2 pe-2 me-2" style="background-color: white; position: static;
+overflow-y: scroll; width: 100%; height: 425px;"">
+ <h2>Что нового</h2>
+ <div id="action-list">
+   {% for action in actions %}
+     {% include "actions/action/detail.html" %}
+   {% endfor %}
+ </div>
+ </div>
  </div>
 {% endblock %}
