--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -12,10 +12,10 @@
     
 
     <!-- Bootstrap core CSS -->
-<link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <!-- Favicons -->
-
+<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#7952b3">
 
 <style>
@@ -94,7 +94,7 @@
     <a class="nav-link" href="{% url "images:list" %}" style="color: black;">Лента фотографии</a>
   </a>
   <a {% if section == "people" %} class="dropdown-item pt-0 pb-0"{% endif %}>
-    <a class="nav-link" href="#" style="color: black;">Друзья</a>
+    <a class="nav-link" href="{% url "user_list" %}" style="color: black;">Друзья</a>
   </a>
   </div>
   {% endif %}
